syntax = "proto3";

package auth;

option go_package= "./pkg/pb";

service AuthService{
  rpc Test(TestRequest) returns (TestResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);

}

message TestRequest {
  string name = 1;
}
message TestResponse {
  string message = 1;
}

message RegisterRequest{
  string email = 1;
  string password = 2;
}

message RegisterResponse{
  int64 status = 1;
  string error = 2;
}